1. Update Web-Management Erupt version: Rewrite! 2. Update Docker: + Delete multi mysql instances. + Update service directory laser. + Delete Dockerfiles.